--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.4.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-auth-helpers": "^1.4.2",
     "@supabase/supabase-js": "^2.84.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
@@ -26,14 +27,14 @@
     "masonry-layout": "^4.2.2",
     "nanoid": "^5.1.6",
     "next": "16.0.3",
-    "razorpay": "^2.9.4",
+    "razorpay": "^2.9.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
     "react-masonry-css": "^1.0.16",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
